Add missing fflush() in one of three places that print stuff repeatedly every so often. PR 32836 from Takuro KUBOTA.